5. Cleaning the Ranking Columns

--- a/A_Star_Wars_Surve/basics.ipynb
+++ b/A_Star_Wars_Surve/basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f8afc621",
+   "id": "b9435c06",
    "metadata": {},
    "source": [
     "# Star wars survey\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "605950d5",
+   "id": "cbcc994c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c465ee39",
+   "id": "69307dcc",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d3966356",
+   "id": "44fbeca3",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed0f26ec",
+   "id": "8ecdd87b",
    "metadata": {},
    "source": [
     "## Cleaning and Mapping Yes/No Columns\n",
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7537cf98",
+   "id": "f63a7f76",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1d3da9f",
+   "id": "150927c5",
    "metadata": {},
    "source": [
     "## Cleaning and Mapping Checkbox Columns\n",
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a14cd95b",
+   "id": "2bc70da6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a0a07fb1",
+   "id": "cb9fef97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "12f4c2ff",
+   "id": "e676e7b4",
    "metadata": {},
    "outputs": [
     {
@@ -673,6 +673,46 @@
    "source": [
     "for movie in star_wars_movies:\n",
     "    print(star_wars[movie].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "432c1c02",
+   "metadata": {},
+   "source": [
+    "## Cleaning the Ranking Columns\n",
+    "\n",
+    "The next six columns ask the respondent to rank the Star Wars movies in order from least to most favorite. 1 means the film was the most favorite, and 6 means it was the least favorite. Each of the following columns can contain the value 1, 2, 3, 4, 5, 6, or NaN:\n",
+    "\n",
+    "- Please rank the Star Wars films in order of preference with 1 being your favorite film in the franchise and 6 being your least favorite film. - How much the respondent liked Star Wars: Episode I The Phantom Menace\n",
+    "- Unnamed: 10 — How much the respondent liked Star Wars: Episode II Attack of the Clones\n",
+    "- Unnamed: 11 — How much the respondent liked Star Wars: Episode III Revenge of the Sith\n",
+    "- Unnamed: 12 — How much the respondent liked Star Wars: Episode IV A New Hope\n",
+    "- Unnamed: 13 — How much the respondent liked Star Wars: Episode V The Empire Strikes Back\n",
+    "- Unnamed: 14 — How much the respondent liked Star Wars: Episode VI Return of the Jedi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5d3923a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ranking_columns = star_wars.columns[9:15]\n",
+    "star_wars[ranking_columns] = star_wars[ranking_columns].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1e9c7edb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rankings = [f'ranking_{i}' for i in range(1,7)]\n",
+    "map_columns = {column:ranking for column, ranking in zip(ranking_columns, rankings)}\n",
+    "star_wars.rename(columns = ma)"
    ]
   }
  ],
