--- a/A_Star_Wars_Surve/basics.ipynb
+++ b/A_Star_Wars_Surve/basics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "acf3328b",
+   "id": "af7d76c9",
    "metadata": {},
    "source": [
     "# Star wars survey\n",
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "668a66c0",
+   "id": "07a9401d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dfc1f388",
+   "id": "bd671335",
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ce7da0c1",
+   "id": "32ad1fc0",
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0958b7fd",
+   "id": "03cc276a",
    "metadata": {},
    "source": [
     "## Cleaning and Mapping Yes/No Columns\n",
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e9cdd3b4",
+   "id": "1d3f20ec",
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28500371",
+   "id": "9d79d138",
    "metadata": {},
    "source": [
     "## Cleaning and Mapping Checkbox Columns\n",
@@ -616,7 +616,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fffc7ab7",
+   "id": "603708b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,7 +631,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b1309229",
+   "id": "8cb52c1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5f4da195",
+   "id": "2a428297",
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5132b09b",
+   "id": "fe747126",
    "metadata": {},
    "source": [
     "## Cleaning the Ranking Columns\n",
@@ -695,7 +695,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1acdd0ed",
+   "id": "3109ded4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ff527ce0",
+   "id": "36ac631d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b3e24c3f",
+   "id": "c6790773",
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a657f5a",
+   "id": "5e077d01",
    "metadata": {},
    "source": [
     "## Finding the Highest-Ranked Movie\n",
@@ -788,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "639a5f5b",
+   "id": "58ad4b5e",
    "metadata": {
     "scrolled": true
    },
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b0cab6",
+   "id": "4edfbc47",
    "metadata": {},
    "source": [
     "We can see that the film with the highest ranking is `Star Wars: Episode V The Empire Strikes Back` and the one with the lowest ranking is `Star Wars: Episode III Revenge of the Sith`.\n",
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e909ae71",
+   "id": "253c061d",
    "metadata": {},
    "source": [
     "## Finding the Most Viewed Movie\n",
@@ -838,8 +838,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "acc0ae65",
+   "execution_count": 12,
+   "id": "40729e20",
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7860acd5",
+   "id": "f6115a9e",
    "metadata": {},
    "source": [
     "We can see the film most viewed is `Star Wars: Episode III Revenge of the Sith` but it is the one with the worst ranking average."
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93dad433",
+   "id": "521ecdfa",
    "metadata": {},
    "source": [
     "## Exploring the Data by Binary Segments\n",
@@ -884,8 +884,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "b4ee60c5",
+   "execution_count": 13,
+   "id": "5c3e3e5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,8 +895,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "631dc6a8",
+   "execution_count": 14,
+   "id": "d097da0b",
    "metadata": {},
    "outputs": [
     {
@@ -938,14 +938,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7cf1ef1",
+   "id": "952c3078",
    "metadata": {},
    "source": [
     "We can observe:\n",
     "- For both genres, the movie with the best ranking is `Star Wars: Episode V The Empire Strikes Back`.\n",
     "- For both genres, the most watched movie is `Star Wars: Episode III Revenge of the Sith`.\n",
     "- For both genres, seem to like the first star wars trilogy better. \n",
-    "- We can see that women have on average more views than men, this may be because more women answered the survey.\n"
+    "- We can see that women have on average more views than men, this may be because more women answered the survey."
    ]
   }
  ],
