2. Understanding the Data

--- a/Investigating-fandango-movie-ratings/basic.ipynb
+++ b/Investigating-fandango-movie-ratings/basic.ipynb
@@ -13,6 +13,108 @@
     "\n",
     "In this project, we'll analyze more recent movie ratings data to determine whether there has been any change in Fandango's rating system after Hickey's analysis."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad847b02",
+   "metadata": {},
+   "source": [
+    "## Understanding the Data\n",
+    "\n",
+    "One of the best ways to figure out whether there has been any change in Fandango's rating system after Hickey's analysis is to compare the system's characteristics previous and after the analysis.\n",
+    "\n",
+    "- Walt Hickey made the data he analyzed publicly available on GitHub. We'll use the data he collected to analyze the characteristics of Fandango's rating system previous to his analysis.\n",
+    "- One of Dataquest's team members collected movie ratings data for movies released in 2016 and 2017. The data is publicly available on GitHub and we'll use it to analyze the rating system's characteristics after Hickey's analysis.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d2893644",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "fandango_score_comparison = pd.read_csv('fandango_score_comparison.csv')\n",
+    "movie_ratings_16_17 = pd.read_csv('movie_ratings_16_17.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "2b22d1c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fandango = fandango_score_comparison[['FILM', 'Fandango_Stars', 'Fandango_Ratingvalue', 'Fandango_votes', 'Fandango_Difference']]\n",
+    "movie_ratings = movie_ratings_16_17[['movie', 'year', 'fandango']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ba6560a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FILM</th>\n",
+       "      <th>Fandango_Stars</th>\n",
+       "      <th>Fandango_Ratingvalue</th>\n",
+       "      <th>Fandango_votes</th>\n",
+       "      <th>Fandango_Difference</th>\n",
+       "      <th>movie</th>\n",
+       "      <th>year</th>\n",
+       "      <th>fandango</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [FILM, Fandango_Stars, Fandango_Ratingvalue, Fandango_votes, Fandango_Difference, movie, year, fandango]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merge = pd.merge(fandango, movie_ratings, left_on='FILM', right_on='movie')\n",
+    "merge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b52d313a",
+   "metadata": {},
+   "source": [
+    "We have shown that we can't find information about `fandango` movies in `movie_ratings` dataset."
+   ]
   }
  ],
  "metadata": {
