3. Changing the Goal of our Analysis

--- a/Investigating-fandango-movie-ratings/basic.ipynb
+++ b/Investigating-fandango-movie-ratings/basic.ipynb
@@ -16,21 +16,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ad847b02",
+   "id": "ec6242ab",
    "metadata": {},
    "source": [
     "## Understanding the Data\n",
     "\n",
     "One of the best ways to figure out whether there has been any change in Fandango's rating system after Hickey's analysis is to compare the system's characteristics previous and after the analysis.\n",
     "\n",
-    "- Walt Hickey made the data he analyzed publicly available on GitHub. We'll use the data he collected to analyze the characteristics of Fandango's rating system previous to his analysis.\n",
-    "- One of Dataquest's team members collected movie ratings data for movies released in 2016 and 2017. The data is publicly available on GitHub and we'll use it to analyze the rating system's characteristics after Hickey's analysis.\n"
+    "- Walt Hickey made the data he analyzed publicly available on [GitHub](https://github.com/fivethirtyeight/data/tree/master/fandango). We'll use the data he collected to analyze the characteristics of Fandango's rating system previous to his analysis.\n",
+    "- One of Dataquest's team members collected movie ratings data for movies released in 2016 and 2017. The data is publicly available on [GitHub](https://github.com/mircealex/Movie_ratings_2016_17) and we'll use it to analyze the rating system's characteristics after Hickey's analysis.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "d2893644",
+   "execution_count": 1,
+   "id": "8e50aa0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "2b22d1c1",
+   "execution_count": 2,
+   "id": "a1399fb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +52,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "ba6560a8",
+   "execution_count": 3,
+   "id": "d5df202d",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,11 +110,49 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b52d313a",
+   "id": "0167c6bf",
    "metadata": {},
    "source": [
     "We have shown that we can't find information about `fandango` movies in `movie_ratings` dataset."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abcfee0f",
+   "metadata": {},
+   "source": [
+    "This could be due to the fact that the dataset has specific sampling characteristics:\n",
+    "For Fandango sampling have:\n",
+    "- At least 30 fan reviews on Fandango\n",
+    "- Contains a rating or score in Rotten Tomatoes, RT User, Metacritic, Metacritic User and IMDb.\n",
+    "- The data from Fandango was pulled on Aug. 24, 2015\n",
+    "\n",
+    "For Movie ratings have:\n",
+    "- Most popular movies (with a significant number of votes).\n",
+    "- Mostly for movies released in 2017 \n",
+    "\n",
+    "It's unlikely to be representative of our population of interest."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e83ebc7",
+   "metadata": {},
+   "source": [
+    "## Changing the Goal of our Analysis\n",
+    "\n",
+    "At this point, we can either collect new data or change our the goal of our analysis. We choose the latter and place some limitations on our initial goal.\n",
+    "\n",
+    "Instead of trying to determine whether there has been any change in Fandango's rating system after Hickey's analysis, our new goal is to determine whether there's any difference between Fandango's ratings for popular movies in 2015 and Fandango's ratings for popular movies in 2016. This new goal should also be a fairly good proxy for our initial goal."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78c8d8f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
