4. Isolating the Samples We Need

--- a/Investigating-fandango-movie-ratings/basic.ipynb
+++ b/Investigating-fandango-movie-ratings/basic.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec6242ab",
+   "id": "e73dc616",
    "metadata": {},
    "source": [
     "## Understanding the Data\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8e50aa0c",
+   "id": "18b1bdb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,18 +42,18 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a1399fb8",
+   "id": "4868c285",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fandango = fandango_score_comparison[['FILM', 'Fandango_Stars', 'Fandango_Ratingvalue', 'Fandango_votes', 'Fandango_Difference']]\n",
-    "movie_ratings = movie_ratings_16_17[['movie', 'year', 'fandango']]"
+    "fandango_previous = fandango_score_comparison[['FILM', 'Fandango_Stars', 'Fandango_Ratingvalue', 'Fandango_votes', 'Fandango_Difference']].copy()\n",
+    "fandango_after = movie_ratings_16_17[['movie', 'year', 'fandango']].copy()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d5df202d",
+   "id": "2a67b905",
    "metadata": {},
    "outputs": [
     {
@@ -104,13 +104,13 @@
     }
    ],
    "source": [
-    "merge = pd.merge(fandango, movie_ratings, left_on='FILM', right_on='movie')\n",
+    "merge = pd.merge(fandango_previous, fandango_after, left_on='FILM', right_on='movie')\n",
     "merge"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0167c6bf",
+   "id": "fd17cdfc",
    "metadata": {},
    "source": [
     "We have shown that we can't find information about `fandango` movies in `movie_ratings` dataset."
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abcfee0f",
+   "id": "b137b672",
    "metadata": {},
    "source": [
     "This could be due to the fact that the dataset has specific sampling characteristics:\n",
@@ -129,14 +129,14 @@
     "\n",
     "For Movie ratings have:\n",
     "- Most popular movies (with a significant number of votes).\n",
-    "- Mostly for movies released in 2017 \n",
+    "- Mostly for movies released in 2016 \n",
     "\n",
     "It's unlikely to be representative of our population of interest."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2e83ebc7",
+   "id": "f1247e96",
    "metadata": {},
    "source": [
     "## Changing the Goal of our Analysis\n",
@@ -147,12 +147,170 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c70f7071",
+   "metadata": {},
+   "source": [
+    "## 4. Isolating the Samples We Need\n",
+    "With the new goal, we now have two populations that we want to describe and compare with each other:\n",
+    "\n",
+    "- All Fandango's ratings for popular movies released in 2015.\n",
+    "- All Fandango's ratings for popular movies released in 2016.\n",
+    "\n",
+    "The term \"popular\" is vague and we need to define it with precision before continuing. We'll use Hickey's benchmark of 30 fan ratings and consider a movie as \"popular\" only if it has 30 fan ratings or more on Fandango's website."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78c8d8f8",
+   "id": "d6efebe8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Great, now let's isolate the movies in the other data set.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "35ad3f26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(fandango_previous['Fandango_votes'] < 30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d23cce1",
+   "metadata": {},
+   "source": [
+    "We can see that all the movies have more than 30 reviews."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10eab59c",
+   "metadata": {},
+   "source": [
+    "For `fandango previous` we need to extract the year values from `FILM` column, the pattern are `Film name (year:int)`. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "37025777",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015    129\n",
+       "2014     17\n",
+       "Name: Year, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fandango_previous['FILM'].value_counts()\n",
+    "pattern = r'\\((.*)\\)'\n",
+    "fandango_previous['Year'] = fandango_previous['FILM'].str.extract(pattern, expand=False).astype(int)\n",
+    "fandango_previous['Year'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "66b9ef5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2015    129\n",
+       "Name: Year, dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fandango_2015 = fandango_previous[fandango_previous['Year'] == 2015].copy()\n",
+    "fandango_2015['Year'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "186aaf52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Now we'll isolate the movies  in the other data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "6c496700",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2016    191\n",
+       "2017     23\n",
+       "Name: year, dtype: int64"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fandango_after['year'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9b49e5f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2016    191\n",
+       "Name: year, dtype: int64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fandango_2016 = fandango_after[fandango_after['year'] == 2016].copy()\n",
+    "fandango_2016['year'].value_counts()"
+   ]
   }
  ],
  "metadata": {
